--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
                         <button id="raise-btn" disabled>Raise</button>
                         <button id="continue-btn" style="display: none;">เล่นต่อ</button>
                         <button id="reset-btn">เริ่มใหม่</button>
+                        <!-- เพิ่มในส่วนควบคุมเกม -->
+<button id="debug-btn" style="background: #ff6b6b; color: white; padding: 5px 10px; border: none; border-radius: 3px; margin: 5px;">
+    Debug AI
+</button>
+<button id="force-turn-btn" style="background: #ffa500; color: white; padding: 5px 10px; border: none; border-radius: 3px; margin: 5px;">
+    Force Next Turn
+</button>
                     </div>
                     
                     <div class="bet-controls">
@@ -200,3 +207,4 @@
 </body>
 
 </html>
+
